<resources>
    <string name="app_name">Formation</string>
    <string name="web_client_id" translatable="false">206903838824-jchushpsl00533srjq4e3ovsd853bvbb.apps.googleusercontent.com</string>
    <string name="title_activity_block">BlockActivity</string>
    <string name="title_activity_project_list_view">ProjectListView</string>
    <string name="title_activity_transition">TransitionActivity</string>
    <string name="title_activity_projects">ProjectsActivity</string>
    <string name="videos">Videos</string>
    <string name="video">Video</string>
    <string name="record_video">Record</string>
    <string name="title_activity_animation">AnimationActivity</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dancers">Dancers</string>
    <string name="add_dancer">Add</string>
    <string name="blocking">Blocking</string>
    <string name="edit_blocking">Edit</string>
    <string name="music">Music</string>
    <string name="select_music">Select</string>
    <!--<string name="no_blocking">This project doesn\'t have a blocking. Click edit to make one.</string>-->

    <!--<string name="action_settings">Settings</string>-->
    <string name="hello_world">Hello world!</string>
    <string name="imgdesc">imgdesc</string>

    <string name="no_blocking">This project doesn\'t have a blocking. \n Click Edit to add a blocking.</string>
    <string name="no_videos">This project doesn\'t have any videos. \n Click Record to add a video.</string>
    <string name="no_dancers">This project doesn\'t have any dancers. \n Click Add to add a dancer.</string>
</resources>
