<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProjectDetailActivity">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"/>

    </android.support.design.widget.AppBarLayout>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp"
            android:fillViewport="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top">

                <ImageView
                    android:id="@+id/buffer"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="103dp"
                    android:id="@+id/blocking"
                    android:layout_below="@id/buffer">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/blocking"
                        android:textSize="32sp"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/edit_blocking_button"
                        android:gravity="end|center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/edit_blocking"
                        android:textColor="@color/formationPurple"
                        app:layout_constraintEnd_toEndOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <fragment
                    android:id="@+id/blocking_fragment"
                    android:name="edu.berkeley.hci.formation.BlockingFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/blocking" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="103dp"
                    android:id="@+id/videos"
                    android:layout_below="@id/blocking_fragment">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/videos"
                        android:textSize="32sp"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/record_video_button"
                        android:gravity="end|center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/record_video"
                        android:textColor="@color/formationPurple"
                        app:layout_constraintEnd_toEndOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <fragment
                    android:id="@+id/video_fragment"
                    android:name="edu.berkeley.hci.formation.VideoFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/videos"/>

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="103dp"
                    android:id="@+id/dancers"
                    android:layout_below="@id/video_fragment">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dancers"
                        android:textSize="32sp"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/add_dancer_button"
                        android:gravity="end|center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/add_dancer"
                        android:textColor="@color/formationPurple"
                        app:layout_constraintEnd_toEndOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <fragment
                    android:id="@+id/dancer_fragment"
                    android:name="edu.berkeley.hci.formation.DancerFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dancers"/>

                <ImageView
                    android:id="@+id/buffer2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/dancer_fragment"/>

            </RelativeLayout>

        </ScrollView>

</android.support.constraint.ConstraintLayout>